# master-thesis

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  packages.nix
.github/workflows/: ci.yml  publish.yml
documents/: axis_angle_rotation.odg  camera_fov_figure.odg  circle_property.odg  database_serialization.odg  database_structure.odg  gimbal_lock.odg  quadtree.odg  raster_pyramid.odg  roll_pitch_yaw.odg  splitting_raster.odg  uv_coordinates.odg  wgs_components.odg  wgs_components2.odg
src/backend/: Cargo.toml  test.db
src/backend/benches/: aggregate.rs
src/backend/src/: deserialize.rs  earth_map.rs  lib.rs  light_pollution.rs  main.rs  population.rs  serialize.rs  world.rs
src/backend/src/deserialize/: iterators.rs  mod.rs  reader.rs  tree.rs
src/backend/src/serialize/: mod.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/frontend/: .gitignore  Cargo.toml  index.html
src/frontend/assets/: index.html
src/frontend/src/: app.rs  camera.rs  lib.rs  shader.wgsl  sphere.rs  state.rs  tiles.rs
src/frontend/src/camera/: controller.rs  mod.rs  projection.rs  state.rs  uniform.rs
src/frontend/src/events/: mouse_move.rs
src/frontend/src/shaders/: atmosphere.wgsl  shader.wgsl
src/frontend/src/state/: depth_texture.rs  input.rs  mod.rs  touch.rs
src/frontend/src/types/: earth.rs  icosphere.rs  mod.rs  performance_metrics.rs  point.rs  query_poi.rs  sphere.rs  webgl_read_write_buffer.rs
src/frontend/src/utils/: buffer.rs
