[workspace]
members = [
  "src/*",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Ardijan Rexhaj <ardijan@rexhaj.no", "Daniel Alvsåker <daniel.alvsaaker@protonmail.com>"]
repository = "https://github.com/master-thesis-ardijan-daniel/master-thesis"

[workspace.dependencies.wgpu]
version = "24.0.0"
default-features = false
features = ["webgpu"]

[workspace.metadata.crane]
name = "thesis"
