[workspace]
members = [
  "src/*",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Ardijan Rexhaj <ardijan@rexhaj.no", "Daniel Alvsåker <daniel.alvsaaker@protonmail.com>"]
repository = "https://github.com/master-thesis-ardijan-daniel/master-thesis"

[workspace.metadata.crane]
name = "thesis"

[workspace.dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
geo = { version = "*", features = ["use-serde"] }
serde = {version="*", features= ["derive"]}
