[package]
name = "backend"
version.workspace = true
repository.workspace = true
publish = false

authors.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
image = "*"
itertools= "0.14"
geo = "*"
