[package]
name = "backend"
version.workspace = true
repository.workspace = true
publish = false

authors.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.1"
bytemuck.workspace = true
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
serde = { version = "*", features = ["derive"] }
geo = { version = "*", features = ["use-serde"] }
image = { version = "*", features = ["serde"] }
memmap2 = "0.9"

common = { path="../common" }
