[package]
name = "frontend"
version.workspace = true
repository.workspace = true
publish = false

authors.workspace = true
edition.workspace = true


# Depending on performance and how much code we have,
# we should investigate if this option makes sense for us.
# Leaving it on for now.
[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = { version = "24.0.0", features = [] }
wasm-bindgen = "0.2"
web-sys = "0.3.77"
