[package]
name = "frontend"
version.workspace = true
repository.workspace = true
publish = false

authors.workspace = true
edition.workspace = true


# Depending on performance and how much code we have,
# we should investigate if this option makes sense for us.
# Leaving it on for now.
[lib]
crate-type = ["cdylib"]

[features]
debug = [
  "env_logger",
  "log",
  "console_error_panic_hook",
  "console_log"
]



[dependencies]
wgpu = { version = "24.0.1", features = ["webgl"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ['Headers','CustomEvent','CustomEventInit', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
winit = { version = "0.30", features = ["rwh_05"] }
bytemuck = { version =  "1.21.0", features = ["derive"] }
glam = "0.30"
web-time= "1.1"
image="0.25"
common = { path="../common" }
gloo-net = {version="0.6.0",feature=["http"]}

env_logger = { version="0.11.6", optional = true }
log = { version="0.4.25", optional = true }
console_error_panic_hook = { version="0.1.7", optional = true }
console_log = { version="1.0.0", optional = true }

